---
source: compiler/src/compiler.rs
expression: "compile([[\"let\".into(), \"x\".into(), 1.0.into()].into(),\n                [\"let\".into(), \"y\".into(), 2.0.into()].into(),\n                [\"fn\".into(), [].into(),\n                            [\"+\".into(), \"x\".into(), \"y\".into()].into()].into()]).await"
---
float64 1
float64 2
jump c
environment 0
environment 1
add
return
peek 1
peek 1
close 6 0 2
dump
drop
